force-app/main/default/objects/Program_Priority__c/Program_Priority__c.object-meta.xml
<CustomObject>
    <label>Child Reference Data</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Child Reference Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>