force-app/main/default/objects/Program_Priority__c/fields/Decision_Code__c.field-meta.xml
<CustomField>
    <fullName>Decision_Code__c</fullName>
    <label>Decision Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Overturn</fullName>
            </value>
            <value>
                <fullName>Partial Overturn</fullName>
            </value>
            <value>
                <fullName>Uphold</fullName>
            </value>
            <value>
                <fullName>Withdrawal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>