force-app/main/default/objects/Program_Priority__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Program_Priorities</relationshipName>
    <type>Lookup</type>
</CustomField>