force-app/main/default/objects/Program_Priority__c/fields/Review_Decision__c.field-meta.xml
<CustomField>
    <fullName>Review_Decision__c</fullName>
    <label>Review Decision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>