force-app/main/default/objects/Program_Priority__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Calendar Days</fullName>
            </value>
            <value>
                <fullName>Business Days</fullName>
            </value>
            <value>
                <fullName>Per Hour</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>