force-app/main/default/objects/Program_Priority__c/recordTypes/Case_Type_Queue.recordType-meta.xml
<RecordType>
    <fullName>Case_Type_Queue</fullName>
    <active>false</active>
    <label>Procedures</label>
</RecordType>