force-app/main/default/objects/Program_Priority__c/recordTypes/Priority_Type.recordType-meta.xml
<RecordType>
    <fullName>Priority_Type</fullName>
    <active>true</active>
    <label>Priority Type</label>
</RecordType>