force-app/main/default/objects/Program_Priority__c/recordTypes/Review_Decision.recordType-meta.xml
<RecordType>
    <fullName>Review_Decision</fullName>
    <active>true</active>
    <label>Review Decision</label>
</RecordType>